# Projects

./: .gitignore
university-labs/bit-torrent-client/project-part-1/torrent-file/: task.h
university-labs/bit-torrent-client/project-part-2/peers-request/: task.h  torrent_file.h
university-labs/bit-torrent-client/project-part-3/socket-connect/: CMakeLists.txt  bencode.cpp  bencode.h  byte_tools.cpp  tcp_connect.cpp
university-labs/bit-torrent-client/project-part-4/handshake/: bencode.cpp  byte_tools.cpp  byte_tools.h  message.cpp  peer_connect.cpp  tcp_connect.cpp  tcp_connect.h  torrent_tracker.cpp
university-labs/bit-torrent-client/project-part-5/download_pieces/: byte_tools.cpp  byte_tools.h  message.h  peer_connect.cpp  peer_connect.h  piece.cpp  piece_storage.cpp  piece_storage.h  tcp_connect.cpp  tcp_connect.h  torrent_file.cpp  torrent_file.h
university-labs/bit-torrent-client/project-part-6/download_file/: CMakeLists.txt  byte_tools.cpp  byte_tools.h  main.cpp  message.cpp  peer_connect.h  piece_storage.cpp  torrent_tracker.cpp  torrent_tracker.h
university-labs/bit-torrent-client/project-part-7/torrent-client-cli/: Makefile
university-labs/cpp-labs/advanced_containers/custom_comparator/: task.cpp
university-labs/cpp-labs/echo_server/: Makefile  README.md  echo_client.cpp  echo_client.h
university-labs/dist-systems/fibers/echo/: CMakeLists.txt  Makefile  README.md  echo.cpp  echo.h  main.cpp  state.h
university-labs/dist-systems/fibers/philosophers/: CMakeLists.txt  Makefile  README.md  fork.h  main.cpp  philosopher.cpp  philosopher.h
(+90 files in other folders)
